# pal4_inject

./: .gitignore  CMakeLists.txt  README.md
cmake/: generate_build_info.cmake
docs/: architecture.md  control_panel_guide.md  gamepad_guide.md  gameplay_controls.md  hook_inventory.md  shadow_rendering_investigation.md  text_rendering_investigation.md
docs/releases/: v0.1.3.md  v0.1.5.md
include/pal4/: evidence_status.h  runtime_layouts.h
include/pal4inject/: camera_pitch_guard.h  camera_unlock_patch.h  cegui_font_experiment.h  cegui_font_resync.h  cegui_widescreen.h  crash_capture.h  dpi_awareness.h  gamepad.h  hook_inventory.h  ida_addresses.h  inject_control_panel.h  inject_settings.h  input_logic.h  input_queue.h  launcher.h  memory_debug.h  protocol.h  runtime_paths.h  script_mode_override.h  types.h  ui_snapshot.h
scripts/: export_ida_pseudocode.py  release.ps1
src/cli/: main.cpp
src/common/: camera_pitch_guard.cpp  camera_unlock_patch.cpp  cegui_font_experiment.cpp  cegui_font_resync.cpp  cegui_widescreen.cpp  crash_capture.cpp  dpi_awareness.cpp  gamepad.cpp  hook_inventory.cpp  inject_control_panel.cpp  inject_settings.cpp  input_logic.cpp  input_queue.cpp  launcher.cpp  memory_debug.cpp  protocol.cpp  runtime_paths.cpp  script_mode_override.cpp  types.cpp  ui_snapshot.cpp
src/launcher/: main.cpp
src/runtime/: battle_ui_layout_hooks.cpp  battle_ui_layout_hooks.h  bootstrap.cpp  bootstrap.h  camera_hooks.cpp  camera_hooks.h  camera_unlock.cpp  camera_unlock.h  cegui_bindings.cpp  cegui_bindings.h  cegui_font_experiment.cpp  cegui_font_experiment.h  cegui_font_hooks.cpp  cegui_font_hooks.h  cegui_font_texture_registry.cpp  cegui_font_texture_registry.h  cegui_renderer_hooks.cpp  cegui_renderer_hooks.h  crash_handler.cpp  crash_handler.h  d3d9_quality_hooks.cpp  d3d9_quality_hooks.h  dialog_pagination_hooks.cpp  dialog_pagination_hooks.h  dll_main.cpp  gamepad_runtime.cpp  gamepad_runtime.h  hook_logging.cpp  hook_logging.h  hook_manager.cpp  hook_manager.h  hud_layout_fixups.cpp  hud_layout_fixups.h  inject_control_window.cpp  inject_control_window.h  input_hooks.cpp  input_hooks.h  ipc_server.cpp  ipc_server.h  memory_debug_runtime.cpp  (+17 more)
tests/: inject_tests_main.cpp
